# chess

./: CMakeLists.txt  README
engine/: aiplayer.cpp  aiplayer.h  asyncplayer.cpp  asyncplayer.h  chessboard.cpp  chessboard.h  chessplayer.h  config.cpp  config.h  global.cpp  global.h  humanplayer.cpp  humanplayer.h  perfomancemeasurement.cpp  perfomancemeasurement.h
examples/: ai_vs_ai.cpp  ai_vs_ai_async.cpp  ai_vs_human.cpp
tests/: tests.cpp  tests.h
